--- a/index.html
+++ b/index.html
@@ -22,27 +22,29 @@
     ></script>
     <title>Bakery Online Store</title>
   </head>
-  <body class="container-fluid">
+  <body>
     <div class="header">
       <h1 class="header__logo">Oh My God!</h1>
       <nav class="header__nav">
         <ul class="header__menu">
-          <li class="header__link">HOME</li>
+          <li class="header__link header__link--active">HOME</li>
           <li class="header__link">BAKERY</li>
           <li class="header__link">DRINKS</li>
           <li class="header__link">CONTACT US</li>
         </ul>
+        <div class="header__counter">
+          <img
+            class="header__cart"
+            src="./assets/img/shopping-cart.svg"
+            alt="Shopping cart image"
+          />
+        </div>
       </nav>
-      <img
-        class="header__cart"
-        src="./assets/img/shopping-cart.svg"
-        alt="Shopping cart image"
-      />
     </div>
-    <div class="content">
+    <div class="home">
       <div
         id="carouselExampleCaptions"
-        class="content__carousel carousel slide"
+        class="home__carousel carousel slide"
         data-ride="carousel"
       >
         <ol class="carousel-indicators">
@@ -58,7 +60,7 @@
           <div class="carousel-item active">
             <img
               src="./assets/img/carousel-img1.jpg"
-              class="d-block w-100"
+              class="d-block w-75"
               alt="Image 1 Carousel"
             />
             <div class="carousel-caption d-none d-md-block">
@@ -107,7 +109,7 @@
           <div class="carousel-item">
             <img
               src="./assets/img/carousel-img2.jpg"
-              class="d-block w-100"
+              class="d-block w-75"
               alt="Image 2 Carousel"
             />
             <div class="carousel-caption d-none d-md-block">
@@ -156,7 +158,7 @@
           <div class="carousel-item">
             <img
               src="./assets/img/carousel-img3.jpg"
-              class="d-block w-100"
+              class="d-block w-75"
               alt="Image 3 Carousel"
             />
             <div class="carousel-caption d-none d-md-block">
