--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
       <h1 class="header__logo">Oh My God!</h1>
       <nav class="header__nav">
         <ul class="header__menu">
-          <li class="header__link header__link--active">HOME</li>
-          <li class="header__link">BAKERY</li>
-          <li class="header__link">DRINKS</li>
-          <li class="header__link">CONTACT US</li>
+          <li class="header__link header__link--active">
+            <a href="./index.html">HOME</a>
+          </li>
+          <li class="header__link"><a href="./bakery.html">BAKERY</a></li>
+          <li class="header__link"><a href="./drinks.html">DRINKS</a></li>
+          <li class="header__link"><a href="./contact.html">CONTACT US</a></li>
         </ul>
         <div class="header__counter">
           <img
