Added Bakery and Drinks pages styling

--- a/bakery.html
+++ b/bakery.html
@@ -45,25 +45,9 @@
         </div>
       </nav>
     </div>
-    <div class="bakery">
-      <!-- <div class="bakery__box">
-        <img
-          src="./assets/img/bakery/brownie.jpg"
-          alt="Dessert Image"
-          class="bakery__img"
-        />
-        <h4 class="bakery__name">Brownie</h4>
-        <p class="bakery__description">
-          Sliced baked brownies on foiled tray! you won't resist it!
-        </p>
-        <div class="bakery__row">
-          <span class="bakery__price">$4.99</span>
-          <span class="bakery__cart"><i class="fas fa-cart-plus"></i></span>
-        </div>
-      </div> -->
-    </div>
+    <div class="bakery"></div>
 
-    <script src="./js/main.js"></script>
+    <script src="./js/bakery.js"></script>
     <!-- Scripts FontAwesome and Bootstrap 4 -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
