--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
     </div>
     <div class="contact"></div>
 
-    <script src="./js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
     <!-- Scripts FontAwesome and Bootstrap 4 -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
