--- a/drinks.html
+++ b/drinks.html
@@ -49,7 +49,7 @@
     </div>
     <div class="drinks"></div>
 
-    <script src="./js/main.js"></script>
+    <script src="./js/drinks.js"></script>
     <!-- Scripts FontAwesome and Bootstrap 4 -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
