--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,60 @@
         </div>
       </nav>
     </div>
-    <div class="contact"></div>
+    <div class="contact">
+      <h2 class="contact__title">Just say hi!</h2>
+      <p class="contact__description">
+        Tell us more about you and we'll contact you soon :)
+      </p>
+      <form id="form">
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="firstName">First Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="firstName"
+              placeholder="First Name"
+            />
+          </div>
+          <div class="form-group col-md-6">
+            <label for="lastName">Last Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="lastName"
+              placeholder="Last Name"
+            />
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="email">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              placeholder="Email"
+            />
+          </div>
+          <div class="form-group col-md-6">
+            <label for="phone">Phone Number</label>
+            <input
+              type="text"
+              class="form-control"
+              id="phone"
+              placeholder="Phone Number"
+            />
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-12">
+            <label for="message">Message</label>
+            <textarea class="form-control" id="message" rows="1"></textarea>
+          </div>
+        </div>
+      </form>
+    </div>
 
     <script type="module" src="./js/main.js"></script>
     <!-- Scripts FontAwesome and Bootstrap 4 -->
