Add media queries Large and Medium resolution

--- a/contact.html
+++ b/contact.html
@@ -101,6 +101,7 @@
             <textarea class="form-control" id="message" rows="1"></textarea>
           </div>
         </div>
+        <button type="button" class="contact__send btn">Send</button>
       </form>
     </div>
 
