--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
   </head>
   <body>
     <div class="header">
-      <h1 class="header__logo">Oh My God!</h1>
       <nav class="header__nav">
+        <h1 class="header__logo">Oh My God!</h1>
+        <button class="header__hamburger" id="hamburger">
+          <i class="fas fa-bars"></i>
+        </button>
         <ul class="header__menu">
           <li class="header__link header__link--active">
             <a href="./index.html">HOME</a>
@@ -237,6 +240,7 @@
     </div>
 
     <!-- Scripts FontAwesome and Bootstrap 4 -->
+    <script src="./js/main.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
