--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,11 @@
   </head>
   <body>
     <div class="header">
-      <h1 class="header__logo">Oh My God!</h1>
       <nav class="header__nav">
+        <h1 class="header__logo">Oh My God!</h1>
+        <button class="header__hamburger" id="hamburger">
+          <i class="fas fa-bars"></i>
+        </button>
         <ul class="header__menu">
           <li class="header__link">
             <a href="./index.html">HOME</a>
