Add Checkout Page and behaviour

--- a/bakery.html
+++ b/bakery.html
@@ -40,18 +40,19 @@
           <li class="header__link"><a href="./contact.html">CONTACT US</a></li>
         </ul>
         <div class="header__counter">
-          <img
-            class="header__cart"
-            src="./assets/img/shopping-cart.svg"
-            alt="Shopping cart image"
-          />
+          <a href="./checkOut.html">
+            <img
+              class="header__cart"
+              src="./assets/img/shopping-cart.svg"
+              alt="Shopping cart image"
+          /></a>
         </div>
       </nav>
     </div>
     <div class="bakery"></div>
 
-    <script src="./js/main.js"></script>
     <script src="./js/bakery.js"></script>
+    <script src="./js/main.js"></script>
     <!-- Scripts FontAwesome and Bootstrap 4 -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
