--- a/checkOut.html
+++ b/checkOut.html
@@ -36,12 +36,8 @@
           <li class="header__link">
             <a href="./bakery.html">BAKERY</a>
           </li>
-          <li class="header__link">
-            <a href="./drinks.html">DRINKS</a>
-          </li>
-          <li class="header__link header__link--active">
-            <a href="./contact.html">CONTACT US</a>
-          </li>
+          <li class="header__link"><a href="./drinks.html">DRINKS</a></li>
+          <li class="header__link"><a href="./contact.html">CONTACT US</a></li>
         </ul>
         <div class="header__counter">
           <a href="./checkOut.html">
@@ -53,63 +49,21 @@
         </div>
       </nav>
     </div>
-    <div class="contact">
-      <h2 class="contact__title">Just say hi!</h2>
-      <p class="contact__description">
-        Tell us more about you and we'll contact you soon :)
-      </p>
-      <form id="form">
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="firstName">First Name</label>
-            <input
-              type="text"
-              class="form-control"
-              id="firstName"
-              placeholder="First Name"
-            />
-          </div>
-          <div class="form-group col-md-6">
-            <label for="lastName">Last Name</label>
-            <input
-              type="text"
-              class="form-control"
-              id="lastName"
-              placeholder="Last Name"
-            />
-          </div>
-        </div>
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="email">Email</label>
-            <input
-              type="email"
-              class="form-control"
-              id="email"
-              placeholder="Email"
-            />
-          </div>
-          <div class="form-group col-md-6">
-            <label for="phone">Phone Number</label>
-            <input
-              type="text"
-              class="form-control"
-              id="phone"
-              placeholder="Phone Number"
-            />
-          </div>
-        </div>
-        <div class="form-row">
-          <div class="form-group col-md-12">
-            <label for="message">Message</label>
-            <textarea class="form-control" id="message" rows="1"></textarea>
-          </div>
-        </div>
-        <button type="button" class="contact__send btn">Send</button>
-      </form>
+    <div class="checkout">
+      <table
+        class="table table-hover table-light checkout__table table-responsive"
+      >
+        <thead>
+          <tr>
+            <th scope="col" colspan="4">Cart List</th>
+          </tr>
+        </thead>
+        <tbody class="checkout__body"></tbody>
+      </table>
     </div>
 
-    <script type="module" src="./js/main.js"></script>
+    <script src="./js/checkOut.js"></script>
+    <script src="./js/main.js"></script>
     <!-- Scripts FontAwesome and Bootstrap 4 -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
