--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
           <li class="header__link"><a href="./contact.html">CONTACT US</a></li>
         </ul>
         <div class="header__counter">
-          <img
-            class="header__cart"
-            src="./assets/img/shopping-cart.svg"
-            alt="Shopping cart image"
-          />
+          <a href="./checkOut.html">
+            <img
+              class="header__cart"
+              src="./assets/img/shopping-cart.svg"
+              alt="Shopping cart image"
+          /></a>
         </div>
       </nav>
     </div>
