--- a/index.html
+++ b/index.html
@@ -49,188 +49,36 @@
     </div>
     <div class="home">
       <div
-        id="carouselExampleCaptions"
+        id="carouselExampleSlidesOnly"
         class="home__carousel carousel slide"
         data-ride="carousel"
       >
-        <ol class="carousel-indicators">
-          <li
-            data-target="#carouselExampleCaptions"
-            data-slide-to="0"
-            class="active"
-          ></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-        </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
               src="./assets/img/carousel-img1.jpg"
-              class="d-block w-75"
-              alt="Image 1 Carousel"
+              class="d-block w-100"
+              alt="Image 1"
             />
-            <div class="carousel-caption d-none d-md-block">
-              <a
-                style="
-                  background-color: black;
-                  color: white;
-                  text-decoration: none;
-                  padding: 4px 6px;
-                  font-family: -apple-system, BlinkMacSystemFont,
-                    'San Francisco', 'Helvetica Neue', Helvetica, Ubuntu, Roboto,
-                    Noto, 'Segoe UI', Arial, sans-serif;
-                  font-size: 12px;
-                  font-weight: bold;
-                  line-height: 1.2;
-                  display: inline-block;
-                  border-radius: 3px;
-                "
-                href="https://unsplash.com/@gretafarnedi?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge"
-                target="_blank"
-                rel="noopener noreferrer"
-                title="Download free do whatever you want high-resolution photos from Greta Farnedi"
-                ><span style="display: inline-block; padding: 2px 3px;"
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    style="
-                      height: 12px;
-                      width: auto;
-                      position: relative;
-                      vertical-align: middle;
-                      top: -2px;
-                      fill: white;
-                    "
-                    viewBox="0 0 32 32"
-                  >
-                    <title>unsplash-logo</title>
-                    <path
-                      d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"
-                    ></path></svg></span
-                ><span style="display: inline-block; padding: 2px 3px;"
-                  >Greta Farnedi</span
-                ></a
-              >
-            </div>
           </div>
           <div class="carousel-item">
             <img
               src="./assets/img/carousel-img2.jpg"
-              class="d-block w-75"
-              alt="Image 2 Carousel"
+              class="d-block w-100"
+              alt="Image 2"
             />
-            <div class="carousel-caption d-none d-md-block">
-              <a
-                style="
-                  background-color: black;
-                  color: white;
-                  text-decoration: none;
-                  padding: 4px 6px;
-                  font-family: -apple-system, BlinkMacSystemFont,
-                    'San Francisco', 'Helvetica Neue', Helvetica, Ubuntu, Roboto,
-                    Noto, 'Segoe UI', Arial, sans-serif;
-                  font-size: 12px;
-                  font-weight: bold;
-                  line-height: 1.2;
-                  display: inline-block;
-                  border-radius: 3px;
-                "
-                href="https://unsplash.com/@arianassz?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge"
-                target="_blank"
-                rel="noopener noreferrer"
-                title="Download free do whatever you want high-resolution photos from Ariana Suárez"
-                ><span style="display: inline-block; padding: 2px 3px;"
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    style="
-                      height: 12px;
-                      width: auto;
-                      position: relative;
-                      vertical-align: middle;
-                      top: -2px;
-                      fill: white;
-                    "
-                    viewBox="0 0 32 32"
-                  >
-                    <title>unsplash-logo</title>
-                    <path
-                      d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"
-                    ></path></svg></span
-                ><span style="display: inline-block; padding: 2px 3px;"
-                  >Ariana Suárez</span
-                ></a
-              >
-            </div>
           </div>
           <div class="carousel-item">
             <img
               src="./assets/img/carousel-img3.jpg"
-              class="d-block w-75"
-              alt="Image 3 Carousel"
+              class="d-block w-100"
+              alt="Image 3"
             />
-            <div class="carousel-caption d-none d-md-block">
-              <a
-                style="
-                  background-color: black;
-                  color: white;
-                  text-decoration: none;
-                  padding: 4px 6px;
-                  font-family: -apple-system, BlinkMacSystemFont,
-                    'San Francisco', 'Helvetica Neue', Helvetica, Ubuntu, Roboto,
-                    Noto, 'Segoe UI', Arial, sans-serif;
-                  font-size: 12px;
-                  font-weight: bold;
-                  line-height: 1.2;
-                  display: inline-block;
-                  border-radius: 3px;
-                "
-                href="https://unsplash.com/@anastasiiachepinska?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge"
-                target="_blank"
-                rel="noopener noreferrer"
-                title="Download free do whatever you want high-resolution photos from Anastasiia Chepinska"
-                ><span style="display: inline-block; padding: 2px 3px;"
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    style="
-                      height: 12px;
-                      width: auto;
-                      position: relative;
-                      vertical-align: middle;
-                      top: -2px;
-                      fill: white;
-                    "
-                    viewBox="0 0 32 32"
-                  >
-                    <title>unsplash-logo</title>
-                    <path
-                      d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"
-                    ></path></svg></span
-                ><span style="display: inline-block; padding: 2px 3px;"
-                  >Anastasiia Chepinska</span
-                ></a
-              >
-            </div>
           </div>
         </div>
-        <a
-          class="carousel-control-prev"
-          href="#carouselExampleCaptions"
-          role="button"
-          data-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a
-          class="carousel-control-next"
-          href="#carouselExampleCaptions"
-          role="button"
-          data-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
       </div>
     </div>
+
     <div class="footer">
       <p class="footer__message">Follow us!</p>
       <div class="footer__socialmedia">
